add ability for FileRead to read from URLs